--- a/src/views/admin/Aedituser.ejs
+++ b/src/views/admin/Aedituser.ejs
@@ -58,7 +58,8 @@
 <body>
     <div class="container">
         <h1>Edit User Details</h1>
-        <form id="editUserForm" action="/edituser" method="POST">
+        <form id="editUserForm" action="/admin/edit" method="POST">
+            <input type="text" name="_id" hidden value="<%= user._id %>">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" value="<%= user.name %>" required>
             <span class="error" id="nameError"></span>
@@ -94,7 +95,7 @@
 
         // Cancel button redirects to the dashboard
         cancelBtn.addEventListener('click', () => {
-            window.location.href = '/home';
+            window.location.href = '/admin/dashboard';
         });
 
         // Validate form before submission
