--- a/src/views/admin/Ahome.ejs
+++ b/src/views/admin/Ahome.ejs
@@ -177,7 +177,7 @@
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
                     <a
-                      href="/admin/edit/<%= student.email %>"
+                      href="/admin/edit/<%= student.id %>"
                       class="text-indigo-600 hover:text-indigo-900 mr-3 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-110"
                     >
                       <i class="fas fa-edit"></i> Edit
